- adding favicon - fixing Operational Hour - adding smooth scroll - adding Proper Link to Social Media - adding script for dynamic "Shop Open" Badge on Header - changing Marquee Color for better readabilty

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .text-stroke-sm {
   -webkit-text-stroke: 1px #fff;
   color: transparent;
